fix: fixed externally controlled visibility working correctly

--- a/.storybook/static/editor.css
+++ b/.storybook/static/editor.css
@@ -19,7 +19,9 @@
   vertical-align: middle;
   overflow: auto;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: space-between;
   gap: var(--spacing-2);
   position: sticky;
   top: 0;
@@ -31,6 +33,8 @@
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   box-shadow: 0px -2px 0px 0px var(--color-light-neutral-surface-disabled) inset;
+  background-color: var(--color-light-danger-surface);
+  border-color: var(--color-light-danger-interactive);
 }
 
 /* Placeholder */
@@ -65,4 +69,6 @@
   overflow: auto;
   resize: vertical;
   outline: none;
+  background-color: var(--color-light-danger-surface);
+  border-color: var(--color-light-danger-interactive);
 }
